fix: fix table button alignment

--- a/src/assets/css/tables.css
+++ b/src/assets/css/tables.css
@@ -3,13 +3,9 @@
 }
 
 .inline-add td {
-	text-align: center !important;
+	text-align: center;
 }
 
-table tbody tr td:nth-last-child(2) {
+.text-right {
 	text-align: right;
-}
-
-table tbody tr td:last-child {
-	text-align: left;
 }
